[workspace]
resolver = "2"
members = ["pearchive", "pearchive/fuzz", "peerofs", "peerofs/fuzz", "peimage", "peimage-service", "peinit", "peoci", "perunner", "peserver", "virtio-user-block-s3", "waitid_timeout"]

[workspace.lints.clippy]
redundant_field_names = "allow"

# reminder on how to do this
# [patch.crates-io]
# libz-ng-sys = { path = '../libz-sys' }
