[workspace]
resolver = "2"
members = ["pearchive", "pearchive/fuzz", "peerofs", "peerofs/fuzz", "pegh", "peimage", "peimage-service", "peinit", "peoci", "perunner", "peserver", "pevub", "tools", "waitid_timeout"]

[workspace.lints.clippy]
redundant_field_names = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
api_client = { version = "0.1.0", path = "../cloud-hypervisor/api_client" }
arbitrary = "1.4.1"
arc-swap = "1.7.1"
async-trait = "0.1.83"
aws-config = "1.8.0"
aws-sdk-s3 = "1.93.0"
base16ct = "0.2.0"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = "4.5.40"
command-fds = "0.3.1"
crossbeam = "0.8.4"
env_logger = "0.11.8"
flate2 = "1.1.1"
hex = "0.4.3"
http = "1.1.0"
libc = "0.2.164"
libfuzzer-sys = "0.4"
log = "0.4.27"
memmap2 = "0.9.5"
mio = "1.0.2"
mio-pidfd = "0.4.0"
moka = "0.12.10"
nix = "0.29.0"
nom = "8.0.0"
oci-spec = "0.8.1"
once_cell = "1.20.2"
pearchive = { version = "0.1.0", path = "pearchive" }
peerofs = { version = "0.1.0", path = "peerofs" }
peimage = { version = "0.1.0", path = "peimage" }
peimage-service = { version = "0.1.0", path = "peimage-service" }
peinit = { version = "0.1.0", path = "peinit" }
peoci = { version = "0.1.0", path = "peoci" }
perunner = { version = "0.1.0", path = "perunner" }
pingora = "0.5.0"
pingora-limits = "0.5.0"
pingora-timeout = "0.5.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.15", default-features = false }
rustix = "1.0.7"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
smallvec = "1.15.1"
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-seqpacket = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vhost = "0.14.0"
vhost-user-backend = "0.19.0"
virtio-bindings = "0.2.5"
virtio-queue = "0.15.0"
vm-memory = "0.16.2"
vmm-sys-util = "0.14.0"
vsock = "0.5.1"
wait-timeout = "0.2.0"
waitid_timeout = { version = "0.1.0", path = "waitid_timeout" }
zerocopy = "0.8.24"
zstd = "0.13.3"
bincode = "2.0.1"
rand = "0.9.1"
lzzzz = "2.0.0"
chrono = "0.4.41"
axum = "0.8.4"
pegh = { version = "0.1.0", path = "pegh" }
futures = "0.3.31"

# reminder on how to do this
# [patch.crates-io]
# libz-ng-sys = { path = '../libz-sys' }

# in testing pevub, added some debug/trace logs to these
# [patch.crates-io]
# vhost-user-backend = { path = '../vhost/vhost-user-backend' }
# vhost = { path = '../vhost/vhost' }
