[package]
name = "pearchive"
version = "0.1.0"
edition = "2021"

[lib]
name = "pearchive"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pearchive"
path = "src/main.rs"
test = false

[dependencies]
byteorder = "1.5.0"
memmap2 = "0.9.5"
rustix = { version = "0.38.37", features = ["fs", "process", "thread"] }

[dev-dependencies]
rand = "0.8.5"

[lints]
workspace = true
