[package]
name = "pearchive"
version = "0.1.0"
edition = "2021"

[lib]
name = "pearchive"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pearchive"
path = "src/main.rs"
test = false

[dependencies]
byteorder = { workspace = true }
memmap2 = { workspace = true }
rustix = { workspace = true, features = ["fs", "process", "thread"] }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
