[package]
name = "peerofs"
version = "0.1.0"
edition = "2021"

[features]
lz4 = ["dep:lzzzz"]

[dependencies]
byteorder = { workspace = true }
bytes = { workspace = true }
lzzzz = { workspace = true, optional = true }
memmap2 = { workspace = true }
rustix = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
zerocopy = { workspace = true, features = ["derive", "std"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "erofs-dump"
path = "src/dump.rs"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
