[package]
name = "peimage-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"] }
oci-spec = "0.8.1"
peimage = { version = "0.1.0", path = "../peimage" }
peoci = { version = "0.1.0", path = "../peoci" }
perunner = { version = "0.1.0", path = "../perunner" }
rustix = { version = "1.0.7", features = ["net"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt"] }
tokio-seqpacket = "0.8.0"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "peimage-service"
path = "src/main.rs"
