[package]
name = "peimage-service"
version = "0.1.0"
edition = "2024"
default-run = "peimage-service"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
moka = { workspace = true, features = ["future"] }
oci-spec = { workspace = true }
peerofs = { workspace = true }
peimage = { workspace = true }
peoci = { workspace = true }
rustix = { workspace = true, features = ["net"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
tokio-seqpacket = { workspace = true }

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "peimage-service"
path = "src/main.rs"

[[bin]]
name = "peimage-service-testclient"
path = "src/bin/testclient.rs"
