[package]
name = "peimage"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
oci-spec = "0.8.1"
peinit = { version = "0.1.0", path = "../peinit" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
flate2 = {version = "1.1.1", features = ["zlib-ng"] }
tar = "0.4.44"
sha2 = "0.10.8"
base16ct = "0.2.0"
tempfile = "3.19.1"
rand = "0.9.0"
rustix = "1.0.5"
zstd = "0.13.3"
peerofs = { version = "0.1.0", path = "../peerofs" }
reqwest = { version = "0.12.15", features = ["stream"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "io-util", "fs"] }
log = "0.4.27"
env_logger = "0.11.8"
generic-array = "1.2.0"
bytes = "1.10.1"
hex = "0.4.3"

[features]
# skip CRC32 calculation when reading from gzip files, not sure this is a good idea or not
nocrc = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "squash"
path = "src/bin/squashbin.rs"

[[bin]]
name = "squash-podman"
path = "src/bin/squashpodman.rs"

[[bin]]
name = "squash-oci"
path = "src/bin/squashoci.rs"

[[bin]]
name = "squash-erofs"
path = "src/bin/squasherofs.rs"

[[bin]]
name = "tardiff"
path = "src/bin/tardiff.rs"

[[bin]]
name = "oci-dist"
path = "src/bin/ocidist.rs"

[lints]
workspace = true
