[package]
name = "peimage"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
oci-spec = { workspace = true }
peinit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
flate2 = { workspace = true, features = ["zlib-ng"] }
tar = { workspace = true }
sha2 = { workspace = true }
base16ct = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
rustix = { workspace = true }
zstd = { workspace = true }
peerofs = { workspace = true }
peoci = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
# skip CRC32 calculation when reading from gzip files, not sure this is a good idea or not
nocrc = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "squash"
path = "src/bin/squashbin.rs"

[[bin]]
name = "squash-podman"
path = "src/bin/squashpodman.rs"

[[bin]]
name = "squash-oci"
path = "src/bin/squashoci.rs"

[[bin]]
name = "squash-erofs"
path = "src/bin/squasherofs.rs"

[[bin]]
name = "tardiff"
path = "src/bin/tardiff.rs"

[lints]
workspace = true
