[package]
name = "peinit"
version = "0.1.0"
edition = "2021"
default-run = "notabin"

[lib]
name = "peinit"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "notabin"
path = "src/notabin.rs"

[dependencies]
waitid_timeout = { version = "0.1.0", path = "../waitid_timeout" }
base16ct = { version = "0.2.0", features = ["alloc"] }
bincode = "1.3.3"
byteorder = "1.5.0"
libc = "0.2.158"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
