[package]
name = "peinit"
version = "0.1.0"
edition = "2021"
default-run = "notabin"

[lib]
name = "peinit"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "notabin"
path = "src/notabin.rs"

[dependencies]
waitid_timeout = { workspace = true }
base16ct = { workspace = true, features = ["alloc"] }
bincode = { workspace = true }
byteorder = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
serde_json = { workspace = true }
rustix = { workspace = true, features = ["fs", "mount", "net", "process", "system"] }
command-fds = { workspace = true }
vsock = { workspace = true, optional = true }

[lints]
workspace = true

[features]
snapshotting = ["dep:vsock"]
blocktesting = []
