[package]
name = "peoci"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
bincode = "2.0.1"
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"] }
nom = "8.0.0"
oci-spec = "0.8.1"
reqwest = { version = "0.12.15", features = ["json"] }
rustix = { version = "1.0.7", features = ["fs"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["fs", "io-util", "macros", "rt"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "oci-dist"
path = "src/bin/ocidist.rs"

[lints]
workspace = true
