[package]
name = "peoci"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["now"] }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
moka = { workspace = true, features = ["future"] }
nom = { workspace = true }
oci-spec = { workspace = true }
reqwest = { workspace = true, features = ["http2", "rustls-tls", "json"] }
rustix = { workspace = true, features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "oci-dist"
path = "src/bin/ocidist.rs"

[lints]
workspace = true
