[package]
name = "perunner"
version = "0.1.0"
edition = "2021"

[lib]
name = "perunner"
path = "src/lib.rs"

[dependencies]
api_client = { version = "0.1.0", path = "../../cloud-hypervisor/api_client" }
pearchive = { version = "0.1.0", path = "../pearchive" }
peinit = { version = "0.1.0", path = "../peinit" }
waitid_timeout = { version = "0.1.0", path = "../waitid_timeout" }
libc = "0.2.158"
rand = "0.8.5"
wait-timeout = "0.2.0"
serde = "1.0.210"
oci-spec = "0.7.0"
serde_json = "1.0.128"
base16ct = {version = "0.2.0", features = ["alloc"] }
sha2 = "0.10.8"
byteorder = "1.5.0"
crossbeam = {version = "0.8.4", features = ["crossbeam-channel"] }
nix = { version = "0.29.0", features = ["sched"] }
tempfile = "3.13.0"
memmap2 = "0.9.5"
clap = { version = "4.5.20", features = ["derive"] }
peimage = { version = "0.1.0", path = "../peimage" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = ["sync"], optional = true }
once_cell = "1.20.2"

[features]
asynk = ["tokio"]
