[package]
name = "perunner"
version = "0.1.0"
edition = "2021"

[lib]
name = "perunner"
path = "src/lib.rs"

[[bin]]
name = "snapshot-test"
path = "src/snapshot-test.rs"

[[bin]]
name = "snapshot-read"
path = "src/snapshot-read.rs"

[[bin]]
name = "blocktest"
path = "src/blocktest.rs"

[dependencies]
api_client = { workspace = true }
pearchive = { workspace = true }
peinit = { workspace = true }
waitid_timeout = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
wait-timeout = { workspace = true }
serde = { workspace = true }
oci-spec = { workspace = true }
serde_json = { workspace = true }
base16ct = { workspace = true, features = ["alloc"] }
sha2 = { workspace = true }
byteorder = { workspace = true }
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
nix = { workspace = true, features = ["sched"] }
tempfile = { workspace = true }
memmap2 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
peimage = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
once_cell = { workspace = true }
log = { workspace = true }
rustix = { workspace = true }
peoci = { workspace = true }
thiserror = { workspace = true }
peimage-service = { workspace = true }
command-fds = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["asynk"]
asynk = ["tokio"]
tokio = ["dep:tokio"]

[lints]
workspace = true
