[package]
name = "peserver"
version = "0.1.0"
edition = "2021"
default-run = "peserver"

[[bin]]
name = "testclient"
path = "src/testclient.rs"

[[bin]]
name = "lb"
path = "src/lb.rs"

[lib]
name = "peserver"
path = "src/lib.rs"
doctest = false

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.83"
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.8.0"
clap = "4.5.21"
env_logger = "0.11.5"
http = "1.1.0"
log = "0.4.22"
oci-spec = "0.7.1"
once_cell = "1.20.2"
pearchive = { version = "0.1.0", path = "../pearchive" }
peimage = { version = "0.1.0", path = "../peimage" }
peinit = { version = "0.1.0", path = "../peinit" }
perunner = { version = "0.1.0", path = "../perunner", features = ["asynk"] }
pingora = { version = "0.4.0", features = ["proxy", "lb"] }
pingora-limits = "0.4.0"
pingora-timeout = "0.4.0"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["io-util"] }
