[package]
name = "peserver"
version = "0.1.0"
edition = "2021"
default-run = "peserver"

[[bin]]
name = "testclient"
path = "src/testclient.rs"

[[bin]]
name = "lb"
path = "src/lb.rs"

[lib]
name = "peserver"
path = "src/lib.rs"
doctest = false

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.83"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.8.0"
clap = "4.5.23"
env_logger = "0.11.5"
flate2 = "1.0.35"
http = "1.1.0"
log = "0.4.22"
oci-spec = "0.7.1"
once_cell = "1.20.2"
pearchive = { version = "0.1.0", path = "../pearchive" }
peimage = { version = "0.1.0", path = "../peimage" }
peinit = { version = "0.1.0", path = "../peinit" }
perunner = { version = "0.1.0", path = "../perunner", features = ["asynk"] }
pingora = { version = "0.4.0", features = ["proxy", "lb"] }
pingora-limits = "0.4.0"
pingora-timeout = "0.4.0"
prometheus = "0.13.4"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["io-util"] }
