[package]
name = "peserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "testclient"
path = "src/testclient.rs"

[[bin]]
name = "lb"
path = "src/lb.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "ghserver"
path = "src/gh.rs"

[lib]
name = "peserver"
path = "src/lib.rs"
doctest = false

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
http = { workspace = true }
log = { workspace = true }
moka = { workspace = true, features = ["future"] }
oci-spec = { workspace = true }
once_cell = { workspace = true }
pearchive = { workspace = true }
pegh = { workspace = true }
peimage = { workspace = true }
peimage-service = { workspace = true }
peinit = { workspace = true }
perunner = { workspace = true, features = ["asynk"] }
pingora = { workspace = true, features = ["proxy", "lb"] }
pingora-limits = { workspace = true }
pingora-timeout = { workspace = true }
prometheus = { workspace = true }
rustix = { workspace = true, features = ["thread"] }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[lints]
workspace = true
