[package]
name = "pevub"
version = "0.1.0"
edition = "2024"

[features]
event_idx = []

[dependencies]
env_logger = { workspace = true }
log = { workspace = true, features = ["release_max_level_warn"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
vhost = { workspace = true, features = ["vhost-user-backend"] }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true, features = ["backend-atomic", "backend-mmap"] }
vmm-sys-util = { workspace = true }

[lints]
workspace = true
