[package]
name = "virtio-user-block-s3"
version = "0.1.0"
edition = "2024"

[features]
event_idx = []

[dependencies]
env_logger = "0.11.8"
log = { version = "0.4.27", features= ["release_max_level_warn"] }
smallvec = "1.15.1"
thiserror = "2.0.12"
vhost = { version = "0.14.0", features = ["vhost-user-backend"] }
vhost-user-backend = "0.19.0"
virtio-bindings = "0.2.5"
virtio-queue = "0.15.0"
vm-memory = { version = "0.16.2", features = ["backend-atomic", "backend-mmap"] }
vmm-sys-util = "0.14.0"

[lints]
workspace = true
