[package]
name = "waitid_timeout"
version = "0.1.0"
edition = "2021"

[lib]
name = "waitid_timeout"
path = "src/lib.rs"
doctest = false

[dependencies]
libc = "0.2.159"
mio = { version = "1.0.2", features = ["os-ext"] }
mio-pidfd = "0.4.0"
# syscalls = { version = "0.6.18", default-features = false, features = ["std"] }

[lints]
workspace = true
