[package]
name = "waitid_timeout"
version = "0.1.0"
edition = "2021"

[lib]
name = "waitid_timeout"
path = "src/lib.rs"
doctest = false

[dependencies]
libc = { workspace = true }
mio = { workspace = true, features = ["os-ext"] }
mio-pidfd = { workspace = true }
# syscalls = { version = "0.6.18", default-features = false, features = ["std"] }

[lints]
workspace = true
