[package]
name = "peerofs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = {version = "1.4.1", features=["derive"]}
libfuzzer-sys = "0.4"
peerofs = { version = "0.1.0", path = ".."}
rustix = { version = "1.0.7", features = ["fs"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
